--- a/src/components/categories/AddCategoryPopup.module.css
+++ b/src/components/categories/AddCategoryPopup.module.css
@@ -1,9 +1,9 @@
 .popup {
-  background-color: beige;
+  background-color: rgb(44, 151, 155);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 70px 5px;
+
+  padding: 70px 25px;
   border-radius: 5px;
   width: 80%;
   max-width: 350px;
@@ -14,9 +14,18 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   z-index: 1000;
 }
-.input {
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.form .input {
   margin-bottom: 20px;
   overflow: hidden;
+  display: block;
 }
 .title {
   margin-bottom: 20px;
@@ -24,10 +33,11 @@
 .titlefield,
 .imagefield {
   margin-top: 5px;
-
-  display: block;
+  width: 100%;
   border: none;
   padding: 10px;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .addcategory {
@@ -41,13 +51,20 @@
 }
 .close {
   position: absolute;
+  font-size: 20px;
   top: 5px;
   right: 5px;
   background-color: antiquewhite;
   z-index: 10;
   cursor: pointer;
-  padding: 4px 10px;
+  padding: 1px 10px;
   border-radius: 50%;
+}
+
+.close:hover {
+  background-color: rgb(199, 20, 20);
+  color: #fff;
+  transition: all 0.3s ease-in-out;
 }
 
 .overlay {
