--- a/src/components/dashboard/History.module.css
+++ b/src/components/dashboard/History.module.css
@@ -1,12 +1,13 @@
 .history {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
   border-radius: 8px;
-  padding: 10px 15px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  /* margin-bottom: 10px; */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -16,18 +17,75 @@
   align-items: baseline;
 }
 
-/* .container {
-  display: flex;
-} */
+@media screen and (max-width: 570px) {
+  .history {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: baseline;
+    margin: 10px auto;
+    height: auto;
+    /* flex-wrap: wrap; */
+    /* word-wrap: break-word; */
+  }
+  .category {
+    overflow: hidden;
+    height: auto;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    width: 100%; /* Ensures text wraps */
+  }
 
-@media screen and (max-width: 430px) {
-  .history,
-  .recentHistory {
-    width: 85%;
+  .amount {
+    width: 100%;
+    margin-top: 5px;
   }
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 430px) {
+  .history {
+    flex: 1;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: baseline;
+    margin: 10px auto;
+
+    /* flex-wrap: wrap; */
+    /* word-wrap: break-word; */
+  }
+  .category {
+    overflow: hidden;
+    height: auto;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    width: 90%; /* Ensures text wraps */
+  }
+
+  .amount {
+    width: 100%;
+    margin-top: 5px;
+  }
+}
+
+/* .container {
+  display: flex;
+  flex-direction: column;
+} */
+
+/* @media screen and (max-width: 430px) {
+  .history,
+  .recentHistory {
+    width: 85%; */
+/* text-align: start; */
+/* }
+} */
+
+/* @media screen and (max-width: 390px) {
   .history,
   .recentHistory {
     width: 75%;
@@ -73,7 +131,7 @@
     margin: 0 auto;
     max-height: 300px;
   }
-}
+} */
 
 .income {
   color: #2ecc71;
@@ -86,6 +144,8 @@
 .category {
   text-transform: capitalize;
   flex: 1;
+  min-width: 50px;
+  word-wrap: break-word;
 }
 
 .transactionList {
@@ -95,4 +155,5 @@
 
 .amount {
   font-weight: 500;
+  background-color: aquamarine;
 }
